--- a/exercise/medical_declaration/build.gradle
+++ b/exercise/medical_declaration/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+
+    implementation group: 'commons-io', name: 'commons-io', version: '2.4'
 }
 
 test {
