--- a/practice/ss11/demo_webservice_a10/src/main/resources/application.properties
+++ b/practice/ss11/demo_webservice_a10/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/m4_a10_spring_data_jpa?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=codegym
+spring.datasource.password=2021
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#server.port=8081
